# OsintgramCXX

./: .gitignore  CMakeLists.txt  README.md  README.mdgabirodriguesnevo_  To-Do.txt  Update-Reminders.txt  commands.list  prepare.sh
CM_Config/: 00-PreTasks.cmake  01-CrossToolchain.cmake  02-BuildingPaths.cmake  Functions.cmake  Installer.cmake  LibraryHandler.cmake  Vcpkg.cmake
CM_Config/PostConfig/: Installer.cmake
Docs/: WriteMods.md
Include/IGApi/: API_Info.hpp  Network.hpp  Session.hpp  Users.hpp
Include/OsintgramCXX/App/: AppProps.hpp  Defaults.hpp  ModHandles.hpp  Properties.hpp
Include/OsintgramCXX/App/Auth/: Cookies.hpp  TwoFactor.hpp
Include/OsintgramCXX/App/Shell/: Shell.hpp  ShellEnv.hpp
Include/OsintgramCXX/Commons/: I18n.hpp  IO.hpp  Terminal.hpp  Utils.hpp
Include/OsintgramCXX/Logging/: Logger.hpp
Include/OsintgramCXX/Networking/: Errors.hpp  Networking.hpp
Include/OsintgramCXX/Networking/Proxy/: Proxy.hpp  ProxyChains.hpp
Include/OsintgramCXX/Security/: FileEncryption.hpp  FileTrust.hpp  UserArchive.hpp
Include/dev_tools/commons/: HelpPage.hpp  Process.hpp  Utils.hpp
Include/dev_tools/logging/: Logger.hpp
Include/dev_tools/network/: Errors.hpp  Network.hpp
Include/dev_tools/network/Proxy/: Proxy.hpp
Include/dev_utils/commons/: Tools.hpp
Include/dev_utils/network/Proxy/: Proxy.hpp  ProxyChains.hpp
References/: device_profiles_ref.json  two_factor_required.json
Resources/: AppSettings.cfg  commands.json  device_profiles.json
Scripts/: convert_profiles.py
Sources/Android_Java/: SourceInfo.cmake  compile.py
Sources/Application/: AndroidCA.cpp  AndroidCA.hpp  Defaults.cpp  Madness.cpp  Madness.hpp  MainExec.cpp  ModInit.cpp  ModInit.hpp  SourceInfo.cmake  WineDetect.cpp
Sources/Application/Auth/: Cookies.cpp  Cookies.hpp  TwoFactor.cpp
Sources/Application/android/: AndroidCA.cpp  TermuxCheck.cpp  TermuxCheck.hpp
Sources/Application/settings/: AppSettings.cpp  AppSettings.hpp
Sources/Application/shell/: Shell.cpp  ShellEnv.cpp  StdCapture.hpp
Sources/Commons/: AndroidEnv.cpp  HelpPage.cpp  SourceInfo.cmake  Terminal.cpp  Tools.cpp  Utils.cpp
Sources/CoreCommands/: Commands.h  SourceInfo.cmake
Sources/CoreCommands/cmd/: CacheManager.cpp  Commands.cpp  Commands.h  Help.cpp  SessionManager.cpp  UserManager.cpp
Sources/CoreCommands/cmd_core/: CCommands.cpp  CHandlers.cpp  CacheFunc.cpp  DsiFunc.cpp  EnvFunc.cpp  FuncHeaders.cpp  FuncHeaders.hpp  NetFunc.cpp  SessionFunc.cpp  UserFunc.cpp
Sources/CoreCommands/cmd_insta/: ICommands.cpp
Sources/CoreCommands/shared/: Commands.h  FuncConstructor.cpp  FuncConstructor.hpp
Sources/DevTools/: SourceInfo.cmake
Sources/DevTools/Commons/: AndroidEnv.cpp  HelpPage.cpp  ProcessHandler.cpp  Terminal.cpp  Tools.cpp  Utils.cpp
Sources/DevTools/executables/: runlib.cpp
Sources/DevTools/net/: Errors.cpp  Networking.cpp
Sources/Logging/: Logger.cpp  SourceInfo.cmake
Sources/Networking/: Errors.cpp  Networking.cpp  SourceInfo.cmake
Sources/Networking/Proxy/: Proxy.cpp
Sources/Security/: Encryptor.cpp  FileEncryption.cpp  FileTrust.cpp  SourceInfo.cmake
Sources/Tests/: Archival.cpp  Archival.hpp  SourceInfo.cmake  TestMain.cpp
Sources/instagram-private-api/: .nomedia  Session.cpp  SourceInfo.cmake
Sources/instagram-private-api/Session/: Devices.cpp  Login.cpp  PWEncrypt.cpp  PWEncrypt.hpp  User.cpp
Toolchains/: Linux_MinGW_Win64.cmake
include/commons/AppCommons/: Terminal.hpp  Tools.hpp  Utils.hpp
include/networking/AppNetworking/: Errors.hpp  OsintgramCXX-Networking.hpp
include/osintgram_app/osintgram/: AppProps.hpp  Defaults.hpp  Properties.hpp  WineDetect.hpp
src/: Defaults.cpp  MainExec.cpp  WineDetect.cpp
src/AppCommons/: HelpPage.cpp  Terminal.cpp  Tools.cpp  Utils.cpp
src/AppNet/: Errors.cpp  Networking.cpp
src/shell/: Shell.cpp  ShellEnv.cpp
toolchains/: Linux_MinGW_Win64.cmake  Linux_RISCV64.cmake  Linux_arm64.cmake
(+15 files in other folders)
